# mailur

./: .eslintrc  .gitignore  .travis.yml  LICENSE  README.md  README.rst  conf-sample.json  conf_test.json  db-clear.sql  db-init.sql  init.sql  m  manage.py  mbsync.example  notes.txt  package.json  pytest.ini  reqs.sh  requirements.in  requirements.txt  requiremets-node.txt  requiremets.txt  rollup.config.js  run  setup.cfg  setup.py  webpack.config.js  wsgi.py
.github/workflows/: build.yaml  check.yaml
assets/: app.css  app.html  app.js  app.less  base.less  editor.html  editor.js  editor.less  filters.html  filters.js  filters.less  icons.css  index.css  index.html  index.js  index.tpl  login.css  login.html  login.js  login.less  msg-line.html  msg-line.js  msg-line.less  msg.html  msg.js  msg.less  msgs.css  msgs.html  msgs.js  msgs.less  page-index.css  page-index.js  page-login.css  page-login.html  page-login.js  page-login.less  picker.css  picker.html  picker.js  picker.less  (+28 more)
assets/font/: LICENSE.txt  fontello.css  fontello.eot  gen.py  icons.css  icons.eot  icons.less  icons.less.tpl  icons.less.txt  selection.json
ci/: __init__.py  cli.py  web.py
core/: __init__.py  app.py  async.py  db.py  filters.py  gmail.py  helpers.py  parser.py  syncer.py  views.py
deploy/: app.py  async.conf.py  async.py  fcrontab  nginx-site-local.conf  nginx-site-yadro.conf  nginx-site.conf  supervisor.ini  web.conf.py  web.py
front/: app.js  base.mustache  compose.html  emails.html  empty.html  login.html  login.mustache  polyfills.js  pwd.html  quote.mustache  sidebar.html  slider.html  styles.less
front/font/: fontello.eot  fontello.less
mail/: __init__.py  app.py  db.py  parse.py  parser.py  sync.py  syncer.py  views.py
mail/theme/: index.tpl  styles.css
mailr/: __init__.py  app.py  async_tasks.py  db.py  filters.py  imap.py  imap_utf7.py  parser.py  syncer.py  views.py
mailr/theme/: all.css  all.less  app.js  emails.tpl  index.tpl  label.tpl  labels.tpl  list.tpl  styles.css  styles.less  thread.tpl
mailur/: __init__.py  app.py  async.py  async_tasks.py  cache.py  cli.py  db.py  db2.py  env.py  filters.py  gmail.py  helpers.py  html.py  imap.py  local.py  lock.py  message.py  parse.py  parser.py  remote.py  schema.py  syncer.py  syncer0.py  views.py  web.py
mailur/static/: index.htm
mailur/theme/: all.js  all.min.js  all.min.map  app.js  app.min.js  app.min.map  app2.js  app_utils.js  base.mustache  emails.html  (+21 more)
namail/: app.py  imap.py
tests/: __init__.py  conftest.py  test_app.py  test_async.py  test_basic.py  test_cli.py  test_fetch_and_parse.py  test_gmail.py  test_imap.py  test_local.py  test_message.py  test_parser.py  test_query.py  test_quote.py  test_sync.py  test_web.py
(+71 files in other folders)
