[metadata]
name = mailur
author = Grisha Kostyuk (aka naspeh)
version = 0.3.0
license = GPLv3
description = mailur
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
requires-python = >=3.6

[options]
zip_safe = False
include_package_data = True
packages = find:

install_requires=
    bottle
    chardet
    docopt
    gevent
    geventhttpclient
    gunicorn
    jsonschema
    lxml
    pytz
    wheel
    wsaccel

[options.extras_require]
test=
    flake8
    flake8-import-order
    pytest
    pytest-cov
    pytest-xdist
    webtest

[options.entry_points]
console_scripts=
    mlr = mailur.cli:main

[tool:pytest]
addopts=-v --tb=short
testpaths=tests
confcutdir=tests

[flake8]
exclude=env,.node_modules,.cache,.eggs
#import-order-style=smarkets
#import-order-style=cryptography
