[metadata]
name = mailur
author = Grisha Kostyuk (aka naspeh)
version = 0.3.0
license = GPLv3
long_description = file: README.md
requires-python = >=3.6

[options]
include_package_data = True
packages = find:

install_requires=

[options.extras_require]
ci=
    werkzeug
    gunicorn

all=
    bottle
    chardet
    docopt
    gevent
    geventhttpclient
    gunicorn
    jsonschema
    lxml
    mistune
    pygments
    pytz
    wheel
    wsaccel

test=
    flake8
    flake8-isort
    #flake8-import-order
    pytest
    pytest-cov
    pytest-xdist
    webtest

[options.entry_points]
console_scripts=
    mlr = mailur.cli:main

[tool:pytest]
addopts=-v --tb=short
testpaths=tests
confcutdir=tests

[flake8]
exclude=env,.node_modules,.cache,.eggs
#import-order-style=smarkets
#import-order-style=cryptography

[isort]
skip=env
multi_line_output=5
