[metadata]
name = mailur
author = Grisha Kostyuk (aka naspeh)
version = 0.3.0
license = GPLv3
long_description = file: README.md
requires-python = >=3.6

[options]
include_package_data = True
packages = find:

install_requires=
    bottle
    chardet
    gevent
    gunicorn
    itsdangerous
    jsonschema
    lxml
    meinheld==0.6.1
    mistune==0.8.4
    pygments
    python-dateutil
    ujson
    wsaccel

[options.extras_require]
test=
    flake8
    flake8-isort
    #flake8-import-order
    pytest
    pytest-cov
    pytest-xdist
    webtest

[options.entry_points]
console_scripts=
    mlr = mailur.cli:main

[tool:pytest]
addopts=-v --tb=short
testpaths=tests
markers =
    no_parallel: flaky at parallel execution

[flake8]
exclude=env,var,.node_modules,.cache,.eggs
#import-order-style=smarkets
#import-order-style=cryptography

[isort]
skip=env,var
multi_line_output=5
